<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CCCCCC"
    android:orientation="vertical"
    android:paddingTop="1dp" >
 
    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#3399FF"
        android:padding="5dp"
        android:text="@string/adduser"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FFFFFF" />
  <ScrollView
     android:id="@+id/scrollView1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     >
       <RelativeLayout
     android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:orientation="vertical"
        android:padding="10dp" >
 
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="30dp"
        android:text="@string/user" />
 
    <EditText
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:ems="10" android:hint="@string/hint">
 
        <requestFocus />
    </EditText>
    
    <TextView 
         android:id="@+id/camp"
         android:layout_below="@+id/userName"
         android:text="Your Name"
         android:layout_marginTop="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" 
         android:layout_marginLeft="24dp"
          />   
          
      <EditText
          android:id="@+id/campData"
          android:layout_below="@+id/camp"
         android:hint="Enter Your Name"
         android:layout_marginTop="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="24dp">
          
      </EditText>
      
       <TextView 
          android:id="@+id/lat"
          android:layout_below="@+id/campData"
         android:text="28.22222222"
         android:layout_marginTop="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="24dp"
          />
      <TextView 
          android:id="@+id/lon"
          android:layout_below="@+id/lat"
         android:text="77.8888888"
         android:layout_marginTop="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="24dp"
          />
      <TextView 
          android:id="@+id/tstamp"
          android:layout_below="@+id/lon"
         android:text="2014-06-08 12:12:12"
         android:layout_marginTop="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="24dp"
          />
      <ImageView 
        android:id="@+id/imgView"
        android:layout_below="@+id/tstamp"    
        android:layout_height="60dp"
        android:layout_width="wrap_content"
        android:paddingTop="5dp" 
        android:layout_marginLeft="24dp"
        android:src="@drawable/images"
        />
    <Button
        android:id="@+id/btnadd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imgView"
        android:layout_below="@+id/imgView"
        android:layout_marginTop="32dp"
        android:text="@string/save"     
        android:onClick="addNewUser" />
 <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgView"
        android:layout_toRightOf="@+id/btnadd"
        android:layout_marginTop="32dp"
        android:text="@string/cancel"     
        android:onClick="cancelAddUser" />


     <Button
         android:id="@+id/button1"
         
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/btnCancel"
         android:layout_toRightOf="@+id/btnCancel"
         android:text="Load GPS data" />
 
</RelativeLayout>

 </ScrollView>
 
</LinearLayout>